# DeepSparkHub

./: .gitignore  CONTRIBUTING.md  README.md  README_TEMPLATE.md  README_en.md  RELEASE.md
.gitee/: ISSUE_TEMPLATE.zh-CN.md  PULL_REQUEST_TEMPLATE.zh-CN.md
3d-reconstruction/hashnerf/: README.md  main_nerf.py  readme.md  requirements.txt  train.sh
PaddlePaddle/: README.md
cv/face/: README.md
cv/local_discriptor/: README.md
cv/super_resolution/: README.md
docs/: DATASET.md  MODEL_TEMPLATE.md  check_readme_format.py
fairseq-tools/: README_bart.md  README_convolutional.md  README_environment.md  README_roberta.md  README_transformer.md
tests/: all_deepsparkhub_model_info.json  model_info.json  prepare_dataset.sh  prepare_python_environment.sh  prepare_system_environment.sh  quick_build_environment.sh  run_test.py
toolbox/verl/0dc8e8596/: pyproject.toml  requirements.txt
toolbox/verl/0dc8e8596/verl/models/llama/megatron/checkpoint_utils/: llama_saver.py
toolbox/verl/0dc8e8596/verl/models/qwen2/megatron/: __init__.py  modeling_qwen2_megatron.py
toolbox/verl/0dc8e8596/verl/models/qwen2/megatron/layers/: parallel_decoder.py  parallel_rmsnorm.py
toolbox/verl/0dc8e8596/verl/models/transformers/: llama.py
toolbox/verl/0dc8e8596/verl/single_controller/: __init__.py
toolbox/verl/0dc8e8596/verl/single_controller/ray/: base.py  megatron.py
toolbox/verl/0dc8e8596/verl/trainer/: main_generation.py  main_ppo.py
toolbox/verl/0dc8e8596/verl/trainer/config/: generation.yaml  ppo_megatron_trainer.yaml
toolbox/verl/0dc8e8596/verl/trainer/ppo/: core_algos.py  ray_trainer.py
toolbox/verl/0dc8e8596/verl/utils/: model.py  torch_functional.py
toolbox/verl/0dc8e8596/verl/utils/checkpoint/: fsdp_checkpoint_manager.py
toolbox/verl/0dc8e8596/verl/utils/dataset/: rl_dataset.py  rm_dataset.py
toolbox/verl/0dc8e8596/verl/utils/megatron/: optimizer_config.py
toolbox/verl/0dc8e8596/verl/utils/reward_score/: kk.py
toolbox/verl/0dc8e8596/verl/utils/reward_score/prime_math/: __init__.py
toolbox/verl/0dc8e8596/verl/workers/: fsdp_workers.py
toolbox/verl/0dc8e8596/verl/workers/critic/: dp_critic.py
toolbox/verl/0dc8e8596/verl/workers/reward_manager/: naive.py
toolbox/verl/0dc8e8596/verl/workers/reward_model/megatron/: reward_model.py
toolbox/verl/0dc8e8596/verl/workers/rollout/naive/: naive_rollout.py
toolbox/verl/0dc8e8596/verl/workers/rollout/vllm_rollout/: vllm_rollout.py  vllm_rollout_spmd.py
toolbox/verl/0dc8e8596/verl/workers/sharding_manager/: fsdp_ulysses.py
(+5436 files in other folders)
